--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<title>3D Model Viewer</title>
-<style> body { margin: 0; } canvas { display: block; } </style>
+  <meta charset="UTF-8" />
+  <title>3D Model Viewer</title>
+  <style> body { margin: 0; } canvas { display: block; } </style>
 </head>
 <body>
-<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.154.0/examples/js/loaders/GLTFLoader.js"></script>
-<script>
+<script type="module">
+  import * as THREE from 'https://unpkg.com/three@0.154.0/build/three.module.js';
+  import { GLTFLoader } from 'https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js';
+
   const scene = new THREE.Scene();
   const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
   const renderer = new THREE.WebGLRenderer({antialias:true});
@@ -20,7 +21,7 @@
   scene.add(light);
   scene.add(new THREE.AmbientLight(0x404040));
 
-  const loader = new THREE.GLTFLoader();
+  const loader = new GLTFLoader();
   loader.load('Z516print-v3.glb', function(gltf) {
     scene.add(gltf.scene);
     camera.position.z = 5;
