--- a/index.html
+++ b/index.html
@@ -3,44 +3,47 @@
 <head>
   <meta charset="UTF-8" />
   <title>3D Model Viewer</title>
-  <style> body { margin: 0; } canvas { display: block; } </style>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+  </style>
 </head>
 <body>
-<script type="module">
-  import * as THREE from 'https://unpkg.com/three@0.154.0/build/three.module.js';
-  import { GLTFLoader } from 'https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js';
+  <script type="module">
+    import * as THREE from 'https://unpkg.com/three@0.154.0/build/three.module.js';
+    import { GLTFLoader } from 'https://unpkg.com/three@0.154.0/examples/jsm/loaders/GLTFLoader.js';
 
-  const scene = new THREE.Scene();
-  const camera = new THREE.PerspectiveCamera(75, window.innerWidth/window.innerHeight, 0.1, 1000);
-  const renderer = new THREE.WebGLRenderer({antialias:true});
-  renderer.setSize(window.innerWidth, window.innerHeight);
-  document.body.appendChild(renderer.domElement);
-
-  const light = new THREE.DirectionalLight(0xffffff, 1);
-  light.position.set(5,10,7);
-  scene.add(light);
-  scene.add(new THREE.AmbientLight(0x404040));
-
-  const loader = new GLTFLoader();
-  loader.load('Z516print-v3.glb', function(gltf) {
-    scene.add(gltf.scene);
-    camera.position.z = 5;
-    animate();
-  }, undefined, function(error) {
-    console.error(error);
-  });
-
-  function animate() {
-    requestAnimationFrame(animate);
-    scene.rotation.y += 0.01;
-    renderer.render(scene, camera);
-  }
-
-  window.addEventListener('resize', () => {
-    camera.aspect = window.innerWidth/window.innerHeight;
-    camera.updateProjectionMatrix();
+    const scene = new THREE.Scene();
+    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+    const renderer = new THREE.WebGLRenderer({ antialias: true });
     renderer.setSize(window.innerWidth, window.innerHeight);
-  });
-</script>
+    document.body.appendChild(renderer.domElement);
+
+    const light = new THREE.DirectionalLight(0xffffff, 1);
+    light.position.set(5, 10, 7);
+    scene.add(light);
+    scene.add(new THREE.AmbientLight(0x404040));
+
+    const loader = new GLTFLoader();
+    loader.load('Z516print-v3.glb', function(gltf) {
+      scene.add(gltf.scene);
+      camera.position.z = 5;
+      animate();
+    }, undefined, function(error) {
+      console.error('加载 GLB 模型失败:', error);
+    });
+
+    function animate() {
+      requestAnimationFrame(animate);
+      scene.rotation.y += 0.005;
+      renderer.render(scene, camera);
+    }
+
+    window.addEventListener('resize', () => {
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    });
+  </script>
 </body>
 </html>
